# myutils

./: .gitignore  LICENSE  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
myutils/: __init__.py  __inti__.py  math_utils.py
