[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myutils-deepgajera-new"
version = "0.0.2"
authors = [
  { name="Deep Gajera", email="deepgajera11@email.com" }
]
description = "Utility functions for Python"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/DeepGajera1012/myutils.git"